--- a/public_html/Lab 2/Index.html
+++ b/public_html/Lab 2/Index.html
@@ -9,7 +9,7 @@
             a {color: #3366FF; letter-spacing: 2px; font-family: Cambria; font-size: 12pt; text-decoration: none}
             a:hover {font-weight: bold; text-decoration: underline}
         </style>
-        <link href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div>
@@ -23,7 +23,8 @@
     <hr>
     <p>
         Trong tin học, các tập tin định kiểu theo tầng – dịch từ tiếng Anh là Cascading Style Sheets (CSS) – được dùng để miêu tả cách trình bày các tài liệu viết bằng ngôn ngữ HTML và XHTML.
-        <br>
+    </p>
+    <p>
         Ngoài ra ngôn ngữ định kiểu theo tầng cũng có thể dùng cho XML, SVG, XUL. Các đặc điểm kỹ thuật của CSS được duy trì bởi World Wide Web Consortium (W3C).
     </p>
     </body>
