--- a/public_html/Lab 2/Index.html
+++ b/public_html/Lab 2/Index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <a href="#"> Trang chủ 2</a> |         
+            <a href="#"> Trang chủ</a> |         
             <a href="E-learning.html"> E-Learning </a> |
             <a href="ITCenter.html"> Trung tâm IT </a> |
             <a href="Resource.html"> Tài nguyên </a> |
@@ -26,6 +26,17 @@
     </p>
     <p>
         Ngoài ra ngôn ngữ định kiểu theo tầng cũng có thể dùng cho XML, SVG, XUL. Các đặc điểm kỹ thuật của CSS được duy trì bởi World Wide Web Consortium (W3C).
+    </p>
+    <hr>
+    <a name="Index">Nội dung</a><br/>
+    <h1>
+        HyperText Markup Language, commonly referred to as HTML, is the standard markup language used to create web pages
+    </h1>
+    <p id="id1">
+        Web browsers can read HTML files and render them into visible or audible web page
+    </p>
+    <p class="class01">
+        HTML describes the structure of a website semantically along with cues for presentation, making it a markup language, rather than a programming language
     </p>
     </body>
 </html>
